# mobile_app

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Main.qml  address.txt  backend_address.h.in  biome.jsonc  main.cpp  package.json  res.qrc  test.sh
model/include/: backend.hpp  screens.hpp  state.hpp  theme_provider.hpp  userinfo.hpp
model/include/auth/: auth.hpp  iauth.hpp  moc_auth.hpp  userinfo.hpp
model/include/dto/: abstract_dto.hpp  create_trip_dto.hpp  extended_station_dto.hpp  id_dto.hpp  order_dto.hpp  orders_list_dto.hpp  route_dto.hpp  station_dto.hpp  trip_dto.hpp  user_dto.hpp
model/include/profile/: iprofile.hpp  moc_profile.hpp
model/include/route/: icurrent_route.hpp  moc_current_route.hpp
model/include/trip/: current_trip.hpp  icurrent_trip.hpp  moc_current_trip.hpp  routeinfo.hpp  tripinfo.hpp
model/include/utils/: http_client.hpp  reply.hpp
model/src/: backend.cpp  state.cpp  theme_provider.cpp  userinfo.cpp
model/src/auth/: auth.cpp  userinfo.cpp
model/src/route/: moc_current_route.cpp
model/src/trip/: current_trip.cpp  icurrent_trip.cpp  moc_current_trip.cpp
model/src/utils/: http_client.cpp
view/components/Login/: EmailField.qml  PasswordField.qml
view/components/Map/: Marker.qml  RouteDialog.qml  WayPoint.qml  ZoomButton.qml
view/components/Orders/: AddressButton.qml  Dimension.qml  Filter.qml  FinishOrderDialog.qml  MinPrice.qml  Order.qml  OrderCard.qml  OrderDialog.qml  RouteDate.qml  RouteHighlight.qml  ShowSizes.qml  Sizes.qml
view/components/common/: ActionButton.qml
view/screens/: FinishOrderScreen.qml  FinishRouteScreen.qml  GetOrdersScreen.qml  LoadingScreen.qml  LoginScreen.qml  MainScreen.qml  ProfileScreen.qml  RouteScreen.qml  StartRouteScreen.qml  StockScreen.qml  WayScreen.qml
